--- a/operations/experimental/example-vars-files/vars-override-otel-collector-exporters.yml
+++ b/operations/experimental/example-vars-files/vars-override-otel-collector-exporters.yml
@@ -7,18 +7,32 @@ otel_collector_config:
     batch:
 
   exporters:
-    file/test:
-      path: /tmp/otel-collector-file.log
-    otlp/test:
-      endpoint: otelcol:4317
+    file/traces:
+      path: /tmp/otel-collector-traces.log
+    file/metrics:
+      path: /tmp/otel-collector-metrics.log
+    file/logs:
+      path: /tmp/otel-collector-logs.log
+    # otlp/test:
+    #   endpoint: otelcol:4317
 
   service:
     pipelines:
       traces:
         receivers: [otlp/placeholder] # no need to change, receivers are filled in automatically by the release
         processors: [batch]
-        exporters: [file/test, otlp/test]
+        exporters:
+        - file/traces
+        # - otlp/test
       metrics:
         receivers: [otlp/placeholder] # no need to change, receivers are filled in automatically by the release
         processors: [batch]
-        exporters: [file/test, otlp/test]
+        exporters:
+        - file/metrics
+        # - otlp/test
+      logs:
+        receivers: [otlp/placeholder] # no need to change, receivers are filled in automatically by the release
+        processors: [batch]
+        exporters:
+        - file/logs
+        # - otlp/test
