{ldap_ca_cert,ldap_server_ssl}
Context: https://github.com/cloudfoundry/cf-deployment/pull/1201#discussion_r1756628597

--- a/operations/enable-nfs-ldap.yml
+++ b/operations/enable-nfs-ldap.yml
@@ -22,7 +22,7 @@
   value: ""
 - type: replace
   path: /instance_groups/name=diego-cell/jobs/name=nfsv3driver/properties/nfsv3driver/ldap_ca_cert?
-  value: ((ldap_ca_cert.ca))
+  value: ((ldap_server_ssl.ca))
 - type: replace
   path: /instance_groups/name=nfs-broker-push/jobs/name=nfsbrokerpush/properties/nfsbrokerpush/ldap_enabled?
   value: true
