make the otel connection use the loggregator_ca for metric store

--- a/operations/use-metric-store.yml
+++ b/operations/use-metric-store.yml
@@ -165,7 +165,7 @@
       - metric-store
       - metric-store.service.internal
       - localhost
-      ca: service_cf_internal_ca
+      ca: loggregator_ca
       common_name: metric-store
       extended_key_usage:
       - client_auth
