adjust alicloud and openstack vm types

--- a/iaas-support/alicloud/cloud-config.yml
+++ b/iaas-support/alicloud/cloud-config.yml
@@ -28,7 +28,7 @@ vm_types:
     ephemeral_disk: {size: "51_200"}
 - name: medium
   cloud_properties:
-    instance_type: ecs.sn1.2xlarge
+    instance_type: ecs.sn1ne.2xlarge
     ephemeral_disk: {size: "51_200"}
 - name: compiler
   cloud_properties:
