--- a/iaas-support/openstack/cloud-config.yml
+++ b/iaas-support/openstack/cloud-config.yml
@@ -16,7 +16,7 @@ vm_types:
     instance_type: small-highmem-100GB-ephemeral-disk
 - name: medium
   cloud_properties:
-    instance_type: m1.large
+    instance_type: medium
 
 disk_types:
 - name: 5GB
