--- a/ci/pipelines/cf-deployment.yml
+++ b/ci/pipelines/cf-deployment.yml
@@ -559,6 +559,7 @@ jobs:
         environments/test/luna/change-postgres-max-connections.yml
         environments/test/luna/smoke-tests-timeout-scale.yml
         environments/test/luna/use-operator-provided-router-tls-certificate.yml
+        environments/test/luna/change-deployment-name-for-nfs-test-server.yml
   - task: bosh-deploy-cf
     file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
     input_mapping:
@@ -592,6 +593,7 @@ jobs:
         operations/use-operator-provided-router-tls-certificate.yml
         operations/enable-nfs-volume-service.yml
         operations/test/enable-nfs-test-server.yml
+        operations/change-deployment-name-for-nfs-test-server.yml
       VARS_FILES: |
         environments/test/luna/deployment-name.yml
         environments/test/luna/network-name.yml
