ci: Fix lint-cf-deployment-manifest job
Add `aliases: true` so that this job succeeds using the latest cf-d-c-t
image, which now has ruby 3.1.x rather than ruby 2.7.x.

In ruby 2.7.x, the yaml library ran an unsafe load by default, which was
okay with aliases, but in ruby 3.1.x it runs a safe load by default. We
need to tell the safe load to explicitly allow aliases.

--- a/ci/pipelines/cf-deployment.yml
+++ b/ci/pipelines/cf-deployment.yml
@@ -486,7 +486,7 @@ jobs:
         args:
         - -exc
         - |
-          ruby -e "require 'yaml'; YAML.load_file('./cf-deployment-develop/cf-deployment.yml')"
+          ruby -e "require 'yaml'; YAML.load_file('./cf-deployment-develop/cf-deployment.yml', aliases: true)"
 
 - name: branch-freshness
   public: true
