validation pipeline for the new beta Noble stemcell

--- a/units/tests/experimental_test/operations.yml
+++ b/units/tests/experimental_test/operations.yml
@@ -85,3 +85,4 @@ disable-tls-tcp-routing-windows-stage-2-route-emitter.yml:
   - ../windows2019-cell.yml
   - enable-nginx-routing-integrity-windows2019.yml
   - disable-tls-tcp-routing-windows-stage-1-unproxied-ports.yml
+use-noble-stemcell: {}
