--- a/ci/pipelines/noble-stemcell.yml
+++ b/ci/pipelines/noble-stemcell.yml
@@ -53,6 +53,7 @@ jobs:
             operations/experimental/use-noble-stemcell.yml
             operations/use-internal-lookup-for-route-services.yml
             operations/experimental/colocate-smoke-tests-on-cc-worker.yml
+            operations/use-postgres.yml
           SYSTEM_DOMAIN: cf.bellatrix.env.wg-ard.ci.cloudfoundry.org
           SKIP_STEMCELL_UPLOAD: true
         task: deploy-cf
