--- a/operations/experimental/use-noble-stemcell.yml
+++ b/operations/experimental/use-noble-stemcell.yml
@@ -4,3 +4,24 @@
     alias: default
     os: ubuntu-noble
     version: latest
+- path: /addons/name=loggregator_agent/include/stemcell/-
+  type: replace
+  value:
+    os: ubuntu-noble
+- path: /addons/name=forwarder_agent/include/stemcell/-
+  type: replace
+  value:
+    os: ubuntu-noble
+- path: /addons/name=loggr-syslog-agent/include/stemcell/-
+  type: replace
+  value:
+    os: ubuntu-noble
+- path: /addons/name=prom_scraper/include/stemcell/-
+  type: replace
+  value:
+    os: ubuntu-noble
+- path: /addons/name=bpm/include/stemcell/-
+  type: replace
+  value:
+    os: ubuntu-noble
+
