Add experimental ops file for shadow user creation

--- a/units/tests/experimental_test/operations.yml
+++ b/units/tests/experimental_test/operations.yml
@@ -45,6 +45,7 @@ enable-nginx-routing-integrity-windows2019.yml:
   - ../windows2019-cell.yml
   - enable-nginx-routing-integrity-windows2019.yml
 enable-oci-phase-1.yml: {}
+enable-shadow-user-creation-by-org-managers.yml: {}
 enable-tls-cloud-controller-postgres.yml:
   ops:
   - ../use-postgres.yml
