--- a/ci/pipelines/noble-stemcell.yml
+++ b/ci/pipelines/noble-stemcell.yml
@@ -50,6 +50,7 @@ jobs:
         params:
           BBL_STATE_DIR: environments/test/bellatrix/bbl-state
           OPS_FILES: |
+            operations/stop-skipping-tls-validation.yml
             operations/experimental/use-noble-stemcell.yml
             operations/use-internal-lookup-for-route-services.yml
             operations/experimental/colocate-smoke-tests-on-cc-worker.yml
