Remove experimental ops file desable-v2-api

--- a/operations/experimental/disable-v2-api.yml
+++ b/operations/experimental/disable-v2-api.yml
@@ -1,4 +1,4 @@
 ---
-- type: replace
-  path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/cc/temporary_enable_v2?
-  value: false
+###
+# API v2 is disabled by default. It can be re-enabled by operators using enable-v2-api.yml
+###
