Add jwt bearer for user authentication
JWT bearer should replace password grants but we need to have both for a while

A default CF should have it, because of
https://github.com/cloudfoundry/cli/issues/3368

--- a/cf-deployment.yml
+++ b/cf-deployment.yml
@@ -660,7 +660,7 @@ instance_groups:
           cf:
             access-token-validity: 1200
             authorities: uaa.none
-            authorized-grant-types: password,refresh_token
+            authorized-grant-types: password,refresh_token,urn:ietf:params:oauth:grant-type:jwt-bearer
             override: true
             refresh-token-validity: 2592000
             scopes:
