Fix BOSH DNS config in Noble stemcell ops file
* see https://github.com/cloudfoundry/diego-release/issues/987#issuecomment-2697164296

--- a/operations/experimental/use-noble-stemcell.yml
+++ b/operations/experimental/use-noble-stemcell.yml
@@ -24,4 +24,7 @@
   type: replace
   value:
     os: ubuntu-noble
+- path: /instance_groups/name=diego-cell/jobs/name=silk-cni/properties/dns_servers/0
+  type: replace
+  value: 169.254.0.53
 
