--- a/units/tests/experimental_test/operations.yml
+++ b/units/tests/experimental_test/operations.yml
@@ -74,6 +74,10 @@ use-mysql-version-8.0.yml:
   pathvalidator:
     path: /instance_groups/name=database/jobs/name=pxc-mysql/properties/mysql_version?
     expectedvalue: "8.0"
+use-mysql-version-8.4.yml:
+  pathvalidator:
+    path: /instance_groups/name=database/jobs/name=pxc-mysql/properties/mysql_version?
+    expectedvalue: "8.4"
 disable-tls-tcp-routing-windows-stage-1-unproxied-ports.yml:
   ops:
   - ../windows2019-cell.yml
