Adds MySQL 8.4 experimental ops file to validation env for CI
[TNZ-45485](https://vmw-jira.broadcom.net/browse/TNZ-45485)

Authored-by: Ryan Wittrup <ryan.wittrup@broadcom.com>

--- a/ci/pipelines/cf-deployment.yml
+++ b/ci/pipelines/cf-deployment.yml
@@ -1215,6 +1215,7 @@ jobs:
         operations/experimental/disable-cf-credhub.yml
         operations/experimental/disable-interpolate-service-bindings.yml
         operations/experimental/use-mysql-version-8.0.yml
+        operations/experimental/use-mysql-version-8.4.yml
         operations/increase-doppler-vm-type-from-minimal-to-small.yml
         operations/scale-diego-cell-to-8.yml
         operations/test/speed-up-dynamic-asgs.yml
