Fix failing unit tests for the new ipv6 ops file

--- a/units/tests/experimental_test/operations.yml
+++ b/units/tests/experimental_test/operations.yml
@@ -37,6 +37,7 @@ enable-containerd-for-processes.yml: {}
 enable-cpu-throttling.yml: {}
 enable-direct-io-grootfs.yml: {}
 enable-iptables-logger.yml: {}
+enable-ipv6-egress.yml: {}
 enable-nginx-routing-integrity-windows2019.yml:
   ops:
   - ../windows2019-cell.yml
