Change the rule destination

--- a/operations/experimental/enable-ipv6-egress.yml
+++ b/operations/experimental/enable-ipv6-egress.yml
@@ -23,5 +23,5 @@
   value:
     name: ipv6_public_networks
     rules:
-    - destination: 2000::-3fff:ffff:ffff:ffff:ffff:ffff:ffff:ffff
+    - destination: 2000::/3
       protocol: all
