Add ops file for enabling new CC healthchecks

--- a/units/tests/standard_test/operations.yml
+++ b/units/tests/standard_test/operations.yml
@@ -21,6 +21,7 @@ enable-cc-v2-rate-limiting.yml:
   - cc_v2_rate_limiter_reset_interval_in_minutes=else
 enable-cc-worker-metrics.yml: {}
 enable-cpu-throttling.yml: {}
+enable-new-cc-healthchecks.yml: {}
 enable-nfs-ldap.yml:
   ops:
   - enable-nfs-volume-service.yml
