--- a/operations/experimental/enable-ipv6-egress.yml
+++ b/operations/experimental/enable-ipv6-egress.yml
@@ -2,3 +2,20 @@
 - type: replace
   path: /instance_groups/name=api/jobs/name=cloud_controller_ng/properties/cc/enable_ipv6?
   value: true
+
+# diego-cell
+- type: replace
+  path: /instance_groups/name=diego-cell/jobs/name=silk-cni/properties/ipv6?/enable
+  value: true
+- type: replace
+  path: /instance_groups/name=diego-cell/jobs/name=silk-daemon/properties/ipv6?/enable
+  value: true
+- type: replace
+  path: /instance_groups/name=diego-cell/jobs/name=silk-daemon/properties/ipv6?/prefix_network
+  value: default
+- type: replace
+  path: /instance_groups/name=diego-cell/jobs/name=vxlan-policy-agent/properties/ipv6?/enable
+  value: true
+- type: replace
+  path: /instance_groups/name=diego-cell/env?/bosh/ipv6/enable
+  value: true
