--- a/ci/pipelines/update-releases.yml
+++ b/ci/pipelines/update-releases.yml
@@ -14504,7 +14504,7 @@ jobs:
       BBL_CONFIG_DIR: environments/test/greengrass/bbl-config
       BBL_IAAS: gcp
       BBL_GCP_SERVICE_ACCOUNT_KEY: ((greengrass_gcp_service_account_json))
-      BBL_GCP_REGION: europe-west3
+      BBL_GCP_REGION: us-east1
       BBL_ENV_NAME: greengrass-compile
       GIT_COMMIT_EMAIL: app-deployments@cloudfoundry.org
       GIT_COMMIT_USERNAME: ARD WG Bot
