Integrate Noble stemcell validation into cf-deployment Experimental-Hermione pipeline

--- a/operations/experimental/use-noble-stemcell.yml
+++ b/operations/experimental/use-noble-stemcell.yml
@@ -1,30 +1,1 @@
-- path: /stemcells/alias=default
-  type: replace
-  value:
-    alias: default
-    os: ubuntu-noble
-    version: latest
-- path: /addons/name=loggregator_agent/include/stemcell/-
-  type: replace
-  value:
-    os: ubuntu-noble
-- path: /addons/name=forwarder_agent/include/stemcell/-
-  type: replace
-  value:
-    os: ubuntu-noble
-- path: /addons/name=loggr-syslog-agent/include/stemcell/-
-  type: replace
-  value:
-    os: ubuntu-noble
-- path: /addons/name=prom_scraper/include/stemcell/-
-  type: replace
-  value:
-    os: ubuntu-noble
-- path: /addons/name=bpm/include/stemcell/-
-  type: replace
-  value:
-    os: ubuntu-noble
-- path: /instance_groups/name=diego-cell/jobs/name=silk-cni/properties/dns_servers/0
-  type: replace
-  value: 169.254.0.53
-
+operations/use-noble-stemcell.yml
