--- a/units/tests/standard_test/operations.yml
+++ b/units/tests/standard_test/operations.yml
@@ -168,3 +168,4 @@ disable-tls-tcp-routing-stage-1-unproxied-ports.yml: {}
 disable-tls-tcp-routing-stage-2-tcp-router-and-route-emitter.yml:
   ops:
   - disable-tls-tcp-routing-stage-1-unproxied-ports.yml
+use-noble-stemcell.yml: {}
