Add Concourse daily time trigger for 9:00–9:30 AM CEST

--- a/ci/pipelines/cf-deployment.yml
+++ b/ci/pipelines/cf-deployment.yml
@@ -247,6 +247,9 @@ resources:
   icon: clock-outline
   source:
     interval: 24h
+    start: "9:00 AM"
+    stop: "9:30 AM"
+    location: Europe/Berlin
 
 - name: cf-deployment-concourse-tasks
   type: git
