--- a/operations/test/add-oidc-provider.yml
+++ b/operations/test/add-oidc-provider.yml
@@ -203,3 +203,5 @@
       common_name: uaa-oidc.service.cf.internal
       alternative_names:
       - uaa-oidc.service.cf.internal
+      extended_key_usage:
+      - server_auth
