--- a/operations/test/enable-nfs-test-ldapserver.yml
+++ b/operations/test/enable-nfs-test-ldapserver.yml
@@ -46,3 +46,5 @@
       common_name: nfstestldapserver.service.cf.internal
       alternative_names:
       - nfstestldapserver.service.cf.internal
+      extended_key_usage:
+      - server_auth
