--- a/operations/use-haproxy.yml
+++ b/operations/use-haproxy.yml
@@ -52,4 +52,6 @@
       - '*.((system_domain))'
       ca: haproxy_ca
       common_name: haproxySSL
+      extended_key_usage:
+      - server_auth
     type: certificate
