Update ops files for Jammy to Noble migration

--- a/units/tests/standard_test/operations.yml
+++ b/units/tests/standard_test/operations.yml
@@ -168,4 +168,4 @@ disable-tls-tcp-routing-stage-1-unproxied-ports.yml: {}
 disable-tls-tcp-routing-stage-2-tcp-router-and-route-emitter.yml:
   ops:
   - disable-tls-tcp-routing-stage-1-unproxied-ports.yml
-use-noble-stemcell.yml: {}
+use-jammy-stemcell.yml: {}
