Set https_server_enabled to true in cf-deployment

--- a/cf-deployment.yml
+++ b/cf-deployment.yml
@@ -1054,6 +1054,10 @@ instance_groups:
       bpm:
         enabled: true
       enable_consul_service_registration: false
+      https_server_enabled: true
+      tls:
+        cert: "((file_server_cert.certificate))"
+        key: "((file_server_cert.private_key))"
       loggregator: *diego_loggregator_client_properties
   - name: routing-api
     release: routing
@@ -2423,6 +2427,16 @@ variables:
     common_name: cc-uploader.service.cf.internal
     alternative_names:
     - cc-uploader.service.cf.internal
+    extended_key_usage:
+    - server_auth
+- name: file_server_cert
+  type: certificate
+  update_mode: converge
+  options:
+    ca: service_cf_internal_ca
+    common_name: file-server.service.cf.internal
+    alternative_names:
+    - file-server.service.cf.internal
     extended_key_usage:
     - server_auth
 - name: diego_locket_server
