--- a/ci/pipelines/update-releases.yml
+++ b/ci/pipelines/update-releases.yml
@@ -218,7 +218,7 @@ resources:
   type: bosh-io-stemcell
   icon: dna
   source:
-    name: bosh-google-kvm-ubuntu-jammy-go_agent
+    name: bosh-google-kvm-ubuntu-noble-go_agent
 - name: fips-stemcell
   type: bosh-io-stemcell
   icon: dna
@@ -458,7 +458,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: bosh-dns-aliases-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: bosh-dns-aliases-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: bosh-dns-aliases-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -470,7 +470,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: bpm-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: bpm-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: bpm-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -482,7 +482,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: capi-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: capi-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: capi-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -494,7 +494,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: cf-networking-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: cf-networking-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: cf-networking-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -506,7 +506,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: cf-smoke-tests-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: cf-smoke-tests-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: cf-smoke-tests-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -518,7 +518,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: cflinuxfs4-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: cflinuxfs4-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: cflinuxfs4-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -530,7 +530,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: diego-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: diego-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: diego-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -542,7 +542,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: garden-runc-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: garden-runc-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: garden-runc-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -554,7 +554,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: log-cache-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: log-cache-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: log-cache-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -566,7 +566,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: loggregator-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: loggregator-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: loggregator-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -578,7 +578,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: loggregator-agent-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: loggregator-agent-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: loggregator-agent-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -590,7 +590,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: nats-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: nats-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: nats-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -602,7 +602,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: pxc-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: pxc-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: pxc-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -614,7 +614,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: routing-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: routing-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: routing-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -626,7 +626,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: silk-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: silk-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: silk-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -638,7 +638,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: statsd-injector-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: statsd-injector-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: statsd-injector-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -650,7 +650,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: uaa-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: uaa-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: uaa-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -662,7 +662,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: credhub-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: credhub-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: credhub-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -674,7 +674,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: cf-cli-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: cf-cli-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: cf-cli-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -686,7 +686,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: binary-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: binary-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: binary-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -698,7 +698,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: dotnet-core-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: dotnet-core-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: dotnet-core-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -710,7 +710,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: go-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: go-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: go-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -722,7 +722,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: java-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: java-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: java-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -734,7 +734,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: nginx-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: nginx-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: nginx-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -746,7 +746,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: nodejs-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: nodejs-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: nodejs-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -758,7 +758,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: php-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: php-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: php-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -770,7 +770,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: python-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: python-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: python-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -782,7 +782,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: r-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: r-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: r-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -794,7 +794,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: ruby-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: ruby-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: ruby-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
@@ -806,7 +806,7 @@ resources:
   source:
     bucket: cf-deployment-compiled-releases
     json_key: ((ci_dev_gcp_service_account_json))
-    regexp: staticfile-buildpack-[^-]+-ubuntu-jammy-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
+    regexp: staticfile-buildpack-[^-]+-ubuntu-noble-[^-]+-(\d+)-(\d+)-(\d+).*\.tgz
 - name: staticfile-buildpack-component-bump-logs-gcs
   type: gcs-resource
   source:
